version/0.20/_sources/api/solver/_autosummary/settings/scene.rst.txt
:orphan:

.. _scene:

scene
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.scene.scene
    :show-inheritance:

.. rubric:: Methods

==========================================   =============================================

Method                                                                             Summary

==========================================   =============================================
:ref:`delete <delete_1>`                                          Delete selected objects.

:ref:`list <list>`                                          List the names of the objects.

:ref:`list_properties <list_properties_1>`           List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                              Create a copy of the object.

:ref:`display <display_2>`                                        Display graphics object.

:ref:`copy <copy_4>`                                                 Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`         Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                                 Clear object history.

==========================================   =============================================

.. rubric:: Named object type

:ref:`scene_child <scene_child>`


.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`results <results>`       'results' child.

========================   ====================

